# apps/api/src/auth/modules/apple/dto/sign-in-with-apple.input.ts
@@ -1,0 +1,6 @@
+import { v1 } from "@repo/api-shared";
+import { createZodDto } from "nestjs-zod";
+
+export class SignInWithAppleInput extends createZodDto(
+  v1.auth.signInWithAppleInputSchema,
+) {}
